# rendo

./: .gitignore  CMakeLists.txt  README.md  image.pam  image.ppm
assets/models/: .DamagedHelmet.obj.swp  DamagedHelmet.mtl  african_head.mtl  cube.mtl  diablo3_pose.mtl  helmet.mtl  rushia.mtl
assets/textures/: african_head_diffuse.pam  (+7 more)
docs/: README.md
inc/: framebuffer.hpp  geometry.hpp  shader.hpp  texture.hpp  transform.hpp  utility.hpp  vector.hpp
include/: aabb.hpp  aabb2.hpp  camera.hpp  clip_triangle.hpp  color.hpp  cube.hpp  framebuffer.hpp  geometry.hpp  ivector2.hpp  light.hpp  lookat.hpp  material.hpp  matrix.hpp  matrix4.hpp  model.hpp  pam_framebuffer.hpp  persp.hpp  position2.hpp  position3.hpp  ppm_framebuffer.hpp  projection.hpp  renderer.hpp  rotate.hpp  sampler.hpp  sampler2.hpp  shader.hpp  texture.hpp  transform.hpp  triangle.hpp  unit_vector3.hpp  utility.hpp  vec.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vertex.hpp  vertex_data.hpp  viewport.hpp
shaders/: albedo_shader.hpp  bloom_shader.hpp  blur_shader.hpp  bright_shader.hpp  deferred_shader.hpp  depth_shader.hpp  diffuse_shader.hpp  emission_shader.hpp  normal_shader.hpp  position_shader.hpp  shadow_shader.hpp  specular_shader.hpp  ssao_blur_shader.hpp  ssao_shader.hpp
src/: clip_triangle.cpp  cube.cpp  framebuffer.cpp  geometry.cpp  lookat.cpp  main.cpp  material.cpp  matrix.cpp  matrix4.cpp  model.cpp  pam_framebuffer.cpp  persp.cpp  ppm_framebuffer.cpp  renderer.cpp  rotate.cpp  sampler.cpp  sampler2.cpp  texture.cpp  transform.cpp  triangle.cpp  vector2.cpp
(+9 files in other folders)
